# CodeSoul

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  main.py  pyproject.toml  requirements.txt
.trae/documents/: CodeSoul 路径参数支持计划.md  GitVibe 开发计划 - 展示 Vibe Coding 能力.md  修复 CSS border-radius 错误.md  修复 Container layout 参数错误.md  修复包安装与导入错误.md  修复导入并简化为纯 TUI 应用.md  推荐全局安装方案.md  配置 API Key.md
src/codesoul/: app.py  db.py  ingest.py  rag.py
